# src/routes/config.ts
@@ -3,6 +3,7 @@ import {
   getConfigHandler,
   postPrimaryLocation,
   postLocationQuickSetup,
+  postLocationFeedSuggestions,
   postStationsHandler,
   postLtceStationsHandler,
   postProvinceTracking,
@@ -12,6 +13,7 @@ import {
   postLookAndFeel,
   postCrawlerMessages,
   postAirQualityStation,
+  postAirportMetarStations,
   postPlaylist,
   postGfx,
 } from "lib/config";
@@ -25,7 +27,9 @@ router.get("/", getConfigHandler);
 router.post("/stations", async (req: Request, res: Response) => await postStationsHandler(req, res));
 router.post("/ltce-stations", async (req: Request, res: Response) => await postLtceStationsHandler(req, res));
 router.post("/primaryLocation", postPrimaryLocation);
-router.post("/locationQuickSetup", postLocationQuickSetup);
+router.post("/locationQuickSetup", async (req: Request, res: Response) => await postLocationQuickSetup(req, res));
+router.post("/locationFeedSuggestions", async (req: Request, res: Response) => await postLocationFeedSuggestions(req, res));
+router.post("/airportMetarStations", postAirportMetarStations);
 router.post("/provinceTracking", postProvinceTracking);
 router.post("/historicalDataStationID", postHistoricalDataStationID);
 router.post("/climateNormals", postClimateNormals);
